[package]
name = "denarii"
version = "0.1.0"
authors = ["Anirudh Sivaraman <sk.anirudh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
float-cmp = "0.5.3"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["run-for-all", "precommit-hook", "run-cargo-test", "run-cargo-fmt", "run-cargo-clippy"]

